# CPU-emulator

./: .gitignore  CMakeLists.txt  command_builder.cpp  command_builder.h  command_factory.cpp  command_factory.h  commands.cpp  commands.h  cpu-emulator.cpp  cpu-emulator.h  factorial  fibonacci.crash  main.cpp  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  program.crash  serialization.cpp  serialization.h  state.h
stack/: CMakeLists.txt  stack.h
stack/tests/: CMakeLists.txt  stack-tests.cpp
